# learning-rust-in-public

./: .env  .env.template  Cargo.toml  Dockerfile  configuration.yaml  configuration.yaml.template  fly.toml
.github/workflows/: audit.yml  fly-deploy.yml  general.yml
.sqlx/: query-00d20cc83bb410f49d61ae648b27b5ac861e9ca7569bc64984577eb26a4e0774.json  query-09aa4dbda4f22f07ad96937e8037ef2e5ed3b8737d69f88d2edb98744e152acd.json  query-221a4535a60bfe38daa01af1b9d2c2c56a6bef95f252a124391d48e5c8a520f6.json  query-2880480077b654e38b63f423ab40680697a500ffe1af1d1b39108910594b581b.json  query-31f82027a5a9a9bdd9c1c619c62a5bd3f7f503b5281e09dc8e00767af110690c.json  query-33b11051e779866db9aeb86d28a59db07a94323ffdc59a5a2c1da694ebe9a65f.json  query-49b1ead021fbb757a905e2f5b82234033b1ceda20bd601ddf7ad5ecb219de8da.json  query-4bc2e5d37c41344c70e4b5c6cbcf84487e1c6ea8f71719940737679ebe0c74dd.json  query-5387086104de9191b648e8cf01d244a50f2f77035d38c57de77debf2c9f1ad9d.json  query-84d42c4dcd027d17835d6528faab0f36d9fedab81020699b135d963069f380d5.json  query-92d1430cbd64c1424560b061cb2cb395369617b1e72bc6e86e7f1cd987748491.json  query-9341e1139459e8f21883417b57ca8421442532b40de510bae5880a24476753ef.json  query-9bfa261067713ca31b191c9f9bcf19ae0dd2d12a570ce06e8e2abd72c5d7b42d.json  query-9ca563dbb06bcd0041ceff538c654dec2441ea0959fa67d4d7bcfeffad442654.json  query-9ea1567b64f7ed9167c4b1470ecfe4c2db44f2afce9ce5e5990e7100bcbb2fb5.json  query-a71a1932b894572106460ca2e34a63dc0cb8c1ba7a70547add1cddbb68133c2b.json  query-acf1b96c82ddf18db02e71a0e297c822b46f10add52c54649cf599b883165e58.json  query-ad120337ee606be7b8d87238e2bb765d0da8ee61b1a3bc142414c4305ec5e17f.json  query-c1abd520bb5b7e04028e5a994db42acfd81bdc91c795e635d9c087d301a3463d.json  query-cddd1823fc8aa6b68d2f4c6910acfec0733ae5854e8f60ca20f3ba4900aad850.json  query-ee90f746b258e706fa0964ca06014f6dcfe0cf237c7bfdeb8e1829d9c3456535.json  query-ef020cdb2c7a6cbffcc11d87e38e27688251ce5d56fba1c3adbc7d447c9df058.json  query-ef144f533203590aeabc7117fc3f22ed997a2ed8d71ce7c34284ae64edbfb8d9.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240809142044_create_subscriptions_table.sql  20240813043650_make_status_not_null_in_subscriptions.sql  20240813045923_create_subscription_tokens_table.sql  20240816045632_create_users_table.sql  20240823123838_session_storage.sql  20240824070520_seed_user.sql  20240826123306_create_idempotency_table.sql  20240827111825_relax_null_checks_on_idempotency.sql  20240827135021_create_newsletter_issues_table.sql  20240827145833_create_issue_delivery_queue_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  helpers.rs  idempotency.rs  issue_delivery_worker.rs  lib.rs  main.rs  routes.rs  session.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  site.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/site/: admin.rs  login.html  login.rs
src/routes/site/admin/: dashboard.rs  logout.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs
(+6 files in other folders)
