[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Sumit Sarkar"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = "0.4.38"
config = "0.14.0"
serde = { version = "1.0.205", features = ["derive"] }
tsid = "0.3.1"

[dev-dependencies]
reqwest = "0.12.5"
tokio = "1.39.2"

[dependencies.sqlx]
version = "0.8.0"
default-features = true
features = ["runtime-tokio", "macros", "sqlite", "chrono", "migrate"]

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
