[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Sumit Sarkar"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = "0.4.38"
config = "0.14.0"
rand = "0.8.5"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.205", features = ["derive"] }
serde-aux = "4.5.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.11"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tsid = "0.3.1"
unicode-segmentation = "1.11.0"
validator = "0.18.1"

[dependencies.sqlx]
version = "0.8.0"
default-features = false
features = ["runtime-tokio", "macros", "sqlite", "chrono", "migrate"]

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.reqwest]
version = "0.12.5"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
claims = "0.7.1"
fake = "2.9.2"
linkify = "0.10.0"
once_cell = "1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["rt", "macros"] }
wiremock = "0.6.1"
